--- a/makefile_linux
+++ b/makefile_linux
@@ -8,10 +8,9 @@ CFLAGS=-c $(SIMBOLOS_DEBUG) $(OPTIMIZACION) $(FLAGS_BASE)
 CFLAGS_TARGET_FINAL=$(SIMBOLOS_DEBUG) $(OPTIMIZACION) $(FLAGS_BASE)
 CC=g++
 EJECUTABLE=a.out
-LIMPIAR=rm objects/*; rm libdan2/objects/*; rm libDanSDL2.a; rm $(EJECUTABLE);
-COMANDO_MOVER=mv libdan2/libDanSDL2.a libDanSDL2.a; 
 
-DIR_LIBDAN2=/home/dani/programacion/c++/libdan2
+DIR_BASE=/home/daniel/Escritorio/stuff/
+DIR_LIBDAN2=$(DIR_BASE)libdansdl2
 
 LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_image
 INCLUDES=-I $(DIR_LIBDAN2)
