--- a/makefile_linux
+++ b/makefile_linux
@@ -8,12 +8,15 @@ CFLAGS=-c $(SIMBOLOS_DEBUG) $(OPTIMIZACION) $(FLAGS_BASE)
 CFLAGS_TARGET_FINAL=$(SIMBOLOS_DEBUG) $(OPTIMIZACION) $(FLAGS_BASE)
 CC=g++
 EJECUTABLE=a.out
+MKDIR=mkdir -p
+LIMPIAR=rm objects/*; rm ./$(EJECUTABLE); touch objects/dummy;
 
 DIR_BASE=/home/daniel/Escritorio/stuff/
 DIR_LIBDAN2=$(DIR_BASE)libdansdl2
+DIR_CAPA_COMPATIBILIDAD_LIBDANSDL2=$(DIR_BASE)/capa_compatibilidad_libdansdl2
 
-LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_image
-INCLUDES=-I $(DIR_LIBDAN2)
+LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_image 
+INCLUDES=-I $(DIR_LIBDAN2) -I $(DIR_CAPA_COMPATIBILIDAD_LIBDANSDL2)
 LIBRERIAS=
 
 include makefile_comun
