Adapts to new camera style.

--- a/makefile_comun
+++ b/makefile_comun
@@ -22,6 +22,7 @@ $(DEP_CLASES_APP) \
 $(DEP_FRAMEWORK_BASE) \
 $(DEP_FRAMEWORK_DERIVADA) \
 $(DEP_CONTROLADORES) \
+$(DEP_HERRAMIENTAS_PROYECTO) \
 $(DIR_O)bootstrap_aplicacion.o \
 main.cpp
 	$(CC) $(CFLAGS_TARGET_FINAL) $(INCLUDES) main.cpp $(DIR_O)bootstrap_aplicacion.o $(DEP_FRAMEWORK_BASE) $(DEP_FRAMEWORK_DERIVADA) $(DEP_HERRAMIENTAS_PROYECTO) $(DEP_CLASES_APP) $(DEP_CONTROLADORES) -o $(EJECUTABLE) $(LIBRERIAS) $(LINKER)
