--- a/makefile_linux
+++ b/makefile_linux
@@ -13,10 +13,12 @@ LIMPIAR=rm objects/*; rm ./$(EJECUTABLE); touch objects/dummy;
 
 DIR_BASE=/home/daniel/Escritorio/stuff/
 DIR_LIBDAN2=$(DIR_BASE)libdansdl2
+DIR_HERRAMIENTAS_PROYECTO=$(DIR_BASE)herramientas_proyecto
+DIR_O_HERRAMIENTAS_PROYECTO=$(DIR_BASE)herramientas_proyecto/objects/
 DIR_CAPA_COMPATIBILIDAD_LIBDANSDL2=$(DIR_BASE)/capa_compatibilidad_libdansdl2
 
-LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_image 
-INCLUDES=-I $(DIR_LIBDAN2) -I $(DIR_CAPA_COMPATIBILIDAD_LIBDANSDL2)
+LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_image -lSDL2_gfx
+INCLUDES=-I $(DIR_LIBDAN2) -I $(DIR_CAPA_COMPATIBILIDAD_LIBDANSDL2) -I $(DIR_HERRAMIENTAS_PROYECTO)
 LIBRERIAS=
 
 include makefile_comun
