Updated to new libdansdl2

--- a/makefile_linux
+++ b/makefile_linux
@@ -11,13 +11,12 @@ EJECUTABLE=a.out
 MKDIR=mkdir -p
 LIMPIAR=rm objects/*; rm ./$(EJECUTABLE); touch objects/dummy;
 
-DIR_BASE=/home/dani/programacion/
+DIR_BASE=/home/dani/programacion/c++/
 DIR_LIBDAN2=$(DIR_BASE)libdansdl2
 DIR_HERRAMIENTAS_PROYECTO=$(DIR_BASE)herramientas_proyecto
-DIR_CAPA_COMPATIBILIDAD_LIBDANSDL2=$(DIR_BASE)/capa_compatibilidad_libdansdl2
 
-LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_image 
-INCLUDES=-I $(DIR_LIBDAN2) -I $(DIR_HERRAMIENTAS_PROYECTO) -I $(DIR_CAPA_COMPATIBILIDAD_LIBDANSDL2)
+LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_image -lGL
+INCLUDES=-I $(DIR_LIBDAN2) -I $(DIR_HERRAMIENTAS_PROYECTO)
 LIBRERIAS=
 
 include makefile_comun
