--- a/makefile_linux
+++ b/makefile_linux
@@ -12,8 +12,11 @@ MKDIR=mkdir -p
 LIMPIAR=rm objects/*; rm ./$(EJECUTABLE); touch objects/dummy;
 
 DIR_BASE=/home/dani/programacion/
-DIR_LIBDAN2=$(DIR_BASE)libdansdl2
-DIR_HERRAMIENTAS_PROYECTO=$(DIR_BASE)herramientas_proyecto
+DIR_LIBDAN2=dependencies/libdansdl2-frozen
+DIR_HERRAMIENTAS_PROYECTO=dependencies/herramientas_proyecto-frozen
+
+#DIR_LIBDAN2=$(DIR_BASE)libdansdl2
+#DIR_HERRAMIENTAS_PROYECTO=$(DIR_BASE)herramientas_proyecto
 
 LINKER=-L$(DIR_LIBDAN2) -lDanSDL2 -L. -lSDL2 -lSDL2_mixer -lSDL2_ttf -lSDL2_image -lGL
 INCLUDES=-I $(DIR_LIBDAN2) -I $(DIR_HERRAMIENTAS_PROYECTO)
