--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/controller")
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/dfwimpl")
+add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/sprite_table")
 
 set(SOURCE ${SOURCE} PARENT_SCOPE)
