--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -11,27 +11,21 @@
 		"sound_volume":127
 	},
 	"input":{
-		"down":[
-			0, 0, 81
-		],
-		"left":[
-			0, 0, 80
-		],
-		"right":[
-			0, 0, 79
-		],
-		"up":[
-			0, 0, 82
-		],
-		"enter":[
-			0, 0, 40
-		],
-		"pageup":[
-			0, 0, 75
-		],
-		"pagedown":[
-			0, 0, 78
-		]
+		"down":[0, 0, 81],
+		"left":[0, 0, 80],
+		"right":[0, 0, 79],
+		"up":[0, 0, 82],
+		"enter":[0, 0, 40],
+		"pageup":[0, 0, 75],
+		"pagedown":[0, 0, 78],
+		"help":[0,0, 58],
+		"mode_camera": [0,0,30],
+		"mode_move": [0,0,31],
+		"mode_align": [0,0,32],
+		"mode_presentation": [0,0,33],
+		"background_selection":[0,0,12],
+		"save":[0,0,22],
+		"load":[0,0,15]
 	},
 	"meta":{
 		"v":1
