--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCE
 	${SOURCE}
 	${CMAKE_CURRENT_SOURCE_DIR}/file_browser.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/help.cpp
 #	${CMAKE_CURRENT_SOURCE_DIR}/[new-controller-source-mark].cpp
 	PARENT_SCOPE
 )
