--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -28,7 +28,8 @@
 		"save":[0,0,22],
 		"load":[0,0,15],
 		"zoom_in":[0,0,86],
-		"zoom_out":[0,0,87]
+		"zoom_out":[0,0,87],
+		"left_click":[1,0,1]
 	},
 	"meta":{
 		"v":1
