--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -29,7 +29,8 @@
 		"load":[0,0,15],
 		"zoom_in":[0,0,86],
 		"zoom_out":[0,0,87],
-		"left_click":[1,0,1]
+		"left_click":[1,0,1],
+		"del":[0,0,76]
 	},
 	"meta":{
 		"v":1
