Added console mode

--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -37,7 +37,8 @@
 		"del":[0,0,76],
 		"insert":[0,0,73],
 		"resize":[0, 0, 21],
-		"align":[0, 0, 4]
+		"align":[0, 0, 4],
+		"tab":[0, 0, 43]
 	},
 	"meta":{
 		"v":1
