--- a/src/sprite_table/CMakeLists.txt
+++ b/src/sprite_table/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE
 	${SOURCE}
 	${CMAKE_CURRENT_SOURCE_DIR}/session_data.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/console_interpreter.cpp
 	PARENT_SCOPE
 )
 
