--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SOURCE
 	${CMAKE_CURRENT_SOURCE_DIR}/file_browser.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/help.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/presentation.cpp
 #	${CMAKE_CURRENT_SOURCE_DIR}/[new-controller-source-mark].cpp
 	PARENT_SCOPE
 )
