--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -47,7 +47,7 @@
 		"window_h_logical":500,
 		"window_h_px":500,
 		"window_show_cursor":true,
-		"window_title":"A test",
+		"window_title":"Sprite table",
 		"window_w_logical":700,
 		"window_w_px":700
 	}
