Small quality of life updates (duplicate at position, duplicate/insert at next index)

--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -21,6 +21,7 @@
 		"enter":[0, 0, 40],
 		"space":[0, 0, 44],
 		"left_control":[0, 0, 224],
+		"left_shift":[0, 0, 225],
 		"pageup":[0, 0, 75],
 		"pagedown":[0, 0, 78],
 		"help":[0,0, 58],
@@ -35,7 +36,9 @@
 		"insert":[0,0,73],
 		"resize":[0, 0, 21],
 		"align":[0, 0, 4],
-		"tab":[0, 0, 43]
+		"tab":[0, 0, 43],
+		"toggle_ids":[0,0,17]
+
 	},
 	"meta":{
 		"v":1
