--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/controller")
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/dfwimpl")
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/sprite_table")
+add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/env")
 
 set(SOURCE ${SOURCE} PARENT_SCOPE)
