--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 if(${BUILD_DEBUG})
 	set(CMAKE_BUILD_TYPE Debug)
+	add_compile_definitions(LIBDANSDL2_DEBUG)
 else()
 	set(CMAKE_BUILD_TYPE Release)
 endif()
