--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,42 @@ option(BUILD_REGULAR "Regular build" OFF)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+
+#derive the kind of build...
+if(${BUILD_APPIMAGE})
+
+	message("will build as AppImage")
+	set(BUILD_VERSION "appimage")
+	if(${CMAKE_VERSION} VERSION_LESS "3.22.0") 
+
+		add_definitions(-DAS_APPIMAGE=1)
+	else()
+
+		add_compile_definitions(AS_APPIMAGE=1)
+	endif()
+
+elseif(${BUILD_REGULAR})
+
+	message("will build as regular app")
+	set(BUILD_VERSION "bin")
+	if(${CMAKE_VERSION} VERSION_LESS "3.22.0") 
+
+		add_definitions(-DAS_REGULAR=1)
+	else()
+
+		add_compile_definitions(AS_REGULAR=1)
+	endif()
+
+else()
+
+	message(FATAL_ERROR "A build type regular/appimage must be chosen")
+endif()
+
+
 if(${BUILD_DEBUG})
+
 	set(CMAKE_BUILD_TYPE Debug)
-	add_compile_definitions(LIBDANSDL2_DEBUG)
+	set(BUILD_VERSION="${BUILD_VERSION}.debug")
 else()
 	set(CMAKE_BUILD_TYPE Release)
 endif()
@@ -30,34 +63,15 @@ add_library(dfw SHARED IMPORTED)
 #If the libraries are not installed, tell them where they are.
 set_target_properties(tools PROPERTIES IMPORTED_LOCATION /usr/local/lib/libtools.so)
 set_target_properties(lm PROPERTIES IMPORTED_LOCATION /usr/local/lib/liblm.so)
-set_target_properties(dansdl2 PROPERTIES IMPORTED_LOCATION /usr/local/lib/libdansdl2.so)
-set_target_properties(ldtools PROPERTIES IMPORTED_LOCATION /usr/local/lib/libldtools.so)
-set_target_properties(dfw PROPERTIES IMPORTED_LOCATION /usr/local/lib/libdfw.so)
 
-if(${BUILD_APPIMAGE})
-
-	message("will build as AppImage")
-
-	if(${CMAKE_VERSION} VERSION_LESS "3.22.0") 
-
-		add_definitions(-DAS_APPIMAGE=1)
-	else()
-
-		add_compile_definitions(AS_APPIMAGE=1)
-	endif()
-endif()
-
-if(${BUILD_REGULAR})
-
-	message("will build as regular app")
-
-	if(${CMAKE_VERSION} VERSION_LESS "3.22.0") 
-
-		add_definitions(-DAS_REGULAR=1)
-	else()
-
-		add_compile_definitions(AS_REGULAR=1)
-	endif()
+if(${BUILD_DEBUG})
+	set_target_properties(dansdl2 PROPERTIES IMPORTED_LOCATION /usr/local/lib/libdansdl2.so)
+	set_target_properties(ldtools PROPERTIES IMPORTED_LOCATION /usr/local/lib/libldtools.so)
+	set_target_properties(dfw PROPERTIES IMPORTED_LOCATION /usr/local/lib/libdfw.so)
+else()
+	set_target_properties(dansdl2 PROPERTIES IMPORTED_LOCATION /usr/local/lib/libdansdl2_debug.so)
+	set_target_properties(ldtools PROPERTIES IMPORTED_LOCATION /usr/local/lib/libldtools_debug.so)
+	set_target_properties(dfw PROPERTIES IMPORTED_LOCATION /usr/local/lib/libdfw_debug.so)
 endif()
 
 if(${CMAKE_VERSION} VERSION_LESS "3.22.0") 
@@ -65,16 +79,17 @@ if(${CMAKE_VERSION} VERSION_LESS "3.22.0")
 	add_definitions(-DMAJOR_VERSION=1)
 	add_definitions(-DMINOR_VERSION=1)
 	add_definitions(-DPATCH_VERSION=0)
+	add_definitions(-DBUILD_VERSION=\"${BUILD_VERSION}\")
 else()
 
 	add_compile_definitions(MAJOR_VERSION=1)
 	add_compile_definitions(MINOR_VERSION=1)
 	add_compile_definitions(PATCH_VERSION=0)
+	add_compile_definitions(BUILD_VERSION=\"${BUILD_VERSION}\")
 endif()
 
 #Configure the executable, we want it into the "build directory" and we want all resources copied
 #to the build directory. If we need to make an appdir, we will move our stuff around
-add_executable(sprite_table main.cpp ${SOURCE})
+add_executable(sprite_table src/main.cpp ${SOURCE})
 set_target_properties(sprite_table PROPERTIES RUNTIME_OUTPUT_DIRECTORY build)
 add_custom_command(TARGET sprite_table POST_BUILD COMMAND cp -r ../resources/* ./build)
-target_link_libraries(sprite_table dfw tools dansdl2 ldtools lm SDL2 SDL2_ttf SDL2_mixer SDL2_image GL stdc++fs)
