--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -3,7 +3,10 @@
 		"dummy":true,
 		"default_sprite_w" : 32,
 		"default_sprite_h" : 32,
-		"movement_factor": 4
+		"movement_factor": 4,
+		"bg_color_r": 0,
+		"bg_color_g": 0,
+		"bg_color_b": 0
 	},
 	"audio":{
 		"audio_buffers":1024,
