--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -37,12 +37,13 @@
 		"left_click":[1,0,1],
 		"del":[0,0,76],
 		"insert":[0,0,73],
+		"insert_alt":[0,0,16],
 		"resize":[0, 0, 21],
 		"align":[0, 0, 4],
 		"tab":[0, 0, 43],
 		"toggle_ids":[0,0,17],
-		"center_camera":[0, 0, 6]
-
+		"center_camera":[0, 0, 6],
+		"flip":[0, 0, 9]
 	},
 	"meta":{
 		"v":1
