--- a/resources/data/config.json
+++ b/resources/data/config.json
@@ -81,7 +81,7 @@
 		"resize":[
 			{"type":0, "device":0, "code":21}
 		],
-		"resize":[
+		"align":[
 			{"type":0, "device":0, "code":4}
 		],
 		"tab":[
