New console methods

--- a/src/sprite_table/CMakeLists.txt
+++ b/src/sprite_table/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCE
 	${SOURCE}
 	${CMAKE_CURRENT_SOURCE_DIR}/session_data.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/console_interpreter.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/sprite_flip.cpp
 	PARENT_SCOPE
 )
 
